--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>JAJJAJ</h1>
-    <script src="maim.js"></script>
+    <h1>Countdown</h1>
+    <p id="countdown"></p>
+    <script src="main.js"></script>
 </body>
 </html>
