--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Countdown</h1>
-    <p id="countdown"></p>
+    <div class="countdownDiv">
+        <p id="countdown" class="countdown"></p>
+    </div>
+
+    <button class="cronoButton" id="startButton">Start</button>
+    <p id="resetParagraph"></p>
     <script src="main.js"></script>
 </body>
 </html>
