--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Countdown</h1>
     <div class="countdownDiv">
-        <p id="countdown" class="countdown"></p>
+        <input type="number" id="countdown" class="countdown" value="10"/>
+        <p>:</p>
+        <input type="number" class="countdown" value="00" />
     </div>
 
     <button class="cronoButton" id="startButton">Start</button>
