added default quick access buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <button class="cronoButton" id="startButton">Start</button>
         <button class="cronoButton" id="resetButton">Reset</button>
     </div>
+    <div class="quickAccess">
+        <button class="cronoButton" id="minute5">5 min</button>
+        <button class="cronoButton" id="minute10">10 min</button>
+        <button class="cronoButton" id="minute15">15 min</button>
+        <button class="cronoButton" id="minute25">25 min</button>
+        <button class="cronoButton" id="minute30">30 min</button>
+        <button class="cronoButton" id="minute45">45 min</button>
+        <button class="cronoButton" id="minute60">1 hour</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
