added sum and substract buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <p class="countdown" id="seconds">00</p>
     </div>
     <div class="countdownButtonsDiv">
+        <button class="cronoButton" id="plus5">+5 min</button>
         <button class="cronoButton" id="startButton">Start</button>
         <button class="cronoButton" id="resetButton">Reset</button>
+        <button class="cronoButton" id="minus5">-5 min</button>
     </div>
     <div class="quickAccess">
         <button class="cronoButton" id="minute5">5 min</button>
